Fix an issue with backspace visibility on iOS

--- a/client/components/Card/Card.less
+++ b/client/components/Card/Card.less
@@ -24,6 +24,7 @@
 		font-size: 14px;
 		line-height: 1.4;
 		border: 1px solid rgba(0,0,0,0.075);
+		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
 	}
 
